<resources>
    <string name="app_name">FliprHackathonXII</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue.</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="show_more">show more</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">FULL NAME</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="driver">Driver</string>
    <string name="dealer">Dealer</string>
    <string name="profile_details">Profile Details</string>
    <string name="save">Save</string>
    <string name="age">AGE</string>
    <string name="experience">EXPERIENCE</string>
    <string name="transporter_name">TRANSPORTER NAME</string>
    <string name="capacity">CAPACITY</string>
    <string name="truck_number">TRUCK NUMBER</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="quantity">QUANTITY</string>
    <string name="weight">WEIGHT</string>
    <string name="nature_of_material">NATURE OF MATERIAL</string>
    <string name="state">STATE</string>
    <string name="city">CITY</string>
    <string name="map_not_ready">Map is not ready</string>
    <string name="book_now">BOOK NOW</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="status_history">⚫</string>
    <string name="sign_out">Sign Out</string>
    <string name="splashscreen">SplashScreen</string>
</resources>