<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    android:id="@+id/front_layout_bg"
    android:layout_marginStart="20dp"
    android:background="@drawable/book_detail_shape"
    android:layout_marginEnd="20dp"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/mobile_number"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mob"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/status_history"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnShowMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mob"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_background"
        android:text="@string/show_more"
        android:textAllCaps="false"
        android:textColor="@color/black" />
</RelativeLayout>