<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerHorizontal="true"
    android:id="@+id/bottomsheetcontainer"
    android:layout_width="match_parent"
    app:behavior_hideable="false"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/profile_details"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <View
        android:layout_below="@+id/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view1"
        android:layout_marginBottom="10dp"
        android:background="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldAge"
        android:layout_below="@id/view1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="6dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/quantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:textColorHint="#616161" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldExp"
        android:layout_below="@id/view1"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/textFieldAge"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColorHint="#616161" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldTransporter"
        android:layout_below="@id/textFieldAge"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nature_of_material">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNofM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColorHint="#616161" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dealer_state"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textFieldTransporter"
        android:hint="@string/state">

        <AutoCompleteTextView
            android:id="@+id/state_dealer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/city_dealer"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/dealer_state"
        android:layout_height="wrap_content"
        android:layout_below="@id/textFieldTransporter"
        android:hint="@string/city">

        <AutoCompleteTextView
            android:id="@+id/dealer_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/dealer_state"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/signUpBtn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view4"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/save"
        android:enabled="false"
        android:text="@string/save"
        android:textAlignment="center" />

</RelativeLayout>