<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorTransparent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_dialog"
        android:orientation="vertical">

            <ImageView
                android:id="@+id/cancel_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_baseline_close_24"
                android:contentDescription="@string/cancel" />


            <TextView
                android:id="@+id/heading_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/full_name"
                android:textColor="#3F51B5"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/driver_trans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/driver_vehicle_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/full_name"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/driver_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/full_name"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/driver_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/full_name"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/driver_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/full_name"
                android:textSize="14sp"
                android:textStyle="bold" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dealer_progress"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:id="@+id/linearBtn"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCall"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:drawableStart="@drawable/ic_baseline_call2_24"
                    android:text="@string/call"
                    android:textColor="@color/purple_700"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:id="@+id/btnSubmit"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/book_now"
                    android:textColor="@color/purple_700"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dfrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/from" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to" />

                <TextView
                    android:id="@+id/dTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/from" />
            </LinearLayout>
        </LinearLayout>
    <ImageView
        android:id="@+id/storyset"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/person"
        android:contentDescription="@string/app_name" />

</RelativeLayout>